fix scrollbar white cube

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,6 +17,7 @@ a {
 
 *::-webkit-scrollbar {
   width: 12px;
+  height: 12px;
 }
 
 *::-webkit-scrollbar-track {
@@ -33,4 +34,8 @@ a {
 
 *::-webkit-scrollbar-thumb:hover {
   background-color: #555;
+}
+
+*::-webkit-scrollbar-corner {
+  background: rgba(0,0,0,0);
 }
